Small cleanups for Home Assistant standards
- dhcp discovery
- Meet config entry unique id requirements
- Fix switch and water heater doing I/O in the event loop
- Store data by entry_id instead of unique_id
- Only use device class if validated
- DRY
- Make unique id meet https://developers.home-assistant.io/docs/entity_registry_index/#unique-id-requirements
- Remove unless __init__ delegation that pylint complained about

--- a/homeassistant/components/screenlogic/translations/en.json
+++ b/homeassistant/components/screenlogic/translations/en.json
@@ -1,17 +1,13 @@
 {
     "config": {
         "abort": {
-            "already_configured": "Gateway already configured. Only a single configuration of a specific gateway is possible.",
-            "no_devices_found": "No devices found on the network"
+            "already_configured": "Device is already configured"
         },
         "error": {
-            "already_configured": "Gateway already configured.",
-            "can_not_connect": "Unable to connect to a ScreenLogic Gateway at the address provided."
+            "cannot_connect": "Failed to connect"
         },
+        "flow_title": "ScreenLogic {name}",
         "step": {
-            "confirm": {
-                "description": "Do you want to start set up?"
-            },
             "gateway_entry": {
                 "data": {
                     "ip_address": "IP Address",
@@ -39,6 +35,5 @@
                 "title": "ScreenLogic"
             }
         }
-    },
-    "title": "ScreenLogic"
+    }
 }
